--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=C\:\\Users\\pokea\\AppData\\Local\\Android\\Sdk
+MAPS_API_KEY=AIzaSyDf8Ze86MtE3gXNEGMu0ssQiVnqlrAJQmY
